--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "dev": "ts-node-dev src/server.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "ts-node-dev": "^1.0.0-pre.59",
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0"
   }
 }
