--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3333
 MONGO_URI=mongodb+srv://barreiro:31243124@cluster0-qudnu.mongodb.net/test?retryWrites=true&w=majority
+SECRET=19902e1dd4b9507c050ac513bb0a3370
