--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/server.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
+    "dev": "ts-node-dev --transpileOnly src/server.ts",
     "start": "node dist/server.js"
   },
   "devDependencies": {
