--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --transpileOnly src/server.ts",
+    "build": "tsc",
     "start": "node dist/server.js"
   },
   "devDependencies": {
