--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
     "nodemailer": "^6.4.11",
