--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.7",
+    "@types/express": "4.17.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.6.0",
     "@types/nodemailer": "^6.4.0",
-    "ts-node-dev": "^1.0.0-pre.62",
-    "typescript": "^4.0.2"
+    "ts-node": "3.3.0",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.2.0",
